# graffiti-drone

./: ':q  .gitignore  README.md  imageprocessing.py  import cv2.py  planning.py  process.py
Arduino_Code/: .i2c_bus.ino.swp  distance_sensor_and_esc.ino  distance_sensor_example.ino  main.ino
Arduino_Code/distance_sensor_and_esc/: distance_sensor_and_esc.ino
Arduino_Code/main/: main.ino
debug/: package.xml  setup.py
debug/debug/: main.py
drone_launch_package/: package.xml  setup.py
drone_launch_package/launch/: drone_launch.py
drone_msgs/: CMakeLists.txt
drone_msgs/msg/: Debug.msg  DistanceSensorArray.msg  SensorMessage.msg
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_msgs/share/drone_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/localization/share/localization/: package.sh
install/microcontroller/share/microcontroller/: package.bash  (+4 more)
localization/: package.xml  setup.py
log/: latest_build
microcontroller/: package.xml  setup.cfg  setup.py
microcontroller/launch/: microcontroller_launch.py
microcontroller/microcontroller/: main.py
pid_controller/: package.xml  setup.py
pid_controller/launch/: pid_launch.py
pid_controller/pid_controller/: debugSub.py  main.py  main2.py  pid_settings.py  safety.py
planning/: imageprocessing.py  package.xml  planning.py  process.py  setup.py
planning/launch/: planning_launch.py
raspberrypi_gpio/: package.xml  setup.cfg  setup.py
raspberrypi_gpio/raspberrypi_gpio/: main.py
(+22 files in other folders)
